--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ h2 {
 }
 
 
-#p-vitamins {
+#p-vitamin {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -183,5 +183,21 @@ h2 {
     border-radius: 5px;
     box-shadow: #999999 5px 5px 10px;
     width: 150px;
-    height: 300px;
+    text-align: center;
+    min-height:300px;
+}
+
+.vitamin span:first-child{
+    text-align: right;
+    font-size: 10px;
+    color: #999999;
+}
+
+.vitamin h3 {
+    font-size: 24px;
+}
+
+.vitamin img {
+    width: 50px;
+    height: 50px;
 }
